# stocker

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: rust.yml  tags.yml
anylist/: Cargo.toml
anylist/src/: lib.rs
app/: Cargo.toml
app/src/: main.rs  scan.rs  user_config.rs  worker.rs
upc/: Cargo.toml
upc/src/: lib.rs  response.rs
