[package]
name = "stocker"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
evdev = "0.12.2"
openssl = { version = "0.10", features = ["vendored"] }
anylist = { path = "../anylist" }
upc = { path = "../upc" }
home = "0.5.9"
systemd-journal-logger = "2.2.0"
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[profile.release]
lto = true
strip = "debuginfo"
panic = "abort"
