[package]
name = "stocker"
version = "0.0.3"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
evdev = "0.12.2"
openssl = { version = "0.10", features = ["vendored"] }
anylist = { path = "../anylist" }
upc = { path = "../upc" }
home = "0.5.9"
serde = { workspace = true }
serde_json = { workspace = true }
slog = "2.7.0"
slog-term = "2.9.1"
slog-async = "2.8.0"
slog-scope = "4.4.0"

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = "z"  # Optimize for size.
codegen-units = 1
